# wikilink-obsidian-resolver

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  Makefile  go.mod  go.sum  resolver.go  resolver_test.go  run-hugo.sh  version.go  workspace_status.sh
cmd/demo/: BUILD.bazel  main.go
cmd/version/: BUILD.bazel  main.go
testdata/: config.toml
testdata/test_vault/Resources/blog/published/: post_linking_to_posts.md  post_with_attachments.md
testdata/test_vault/Resources/zk/: zk_topic_a.md  zk_topic_b.md
tools/: workspace_status.sh
