module(
    name = "obsidian-markdown",
    repo_name = "code.ndumas.com_ndumas_obsidian-markdown",
)

bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_go", version = "0.44.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_stretchr_testify", "com_github_therealfakemoot_go_obsidian", "dev_abhg_go_goldmark_wikilink", "org_uber_go_zap")
