load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "demo_lib",
    srcs = ["main.go"],
    importpath = "github.com/therealfakemoot/wikilink-obsidian-resolver/cmd/demo",
    visibility = ["//visibility:private"],
    deps = ["@com_github_therealfakemoot_go_obsidian//:go-obsidian"],
)

go_binary(
    name = "demo",
    embed = [":demo_lib"],
    visibility = ["//visibility:public"],
)
