load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "demo_lib",
    srcs = ["main.go"],
    importpath = "github.com/therealfakemoot/wikilink-obsidian-resolver/cmd/demo",
    visibility = ["//visibility:private"],
    deps = ["//:wikilink-obsidian-resolver"],
)

go_binary(
    name = "demo",
    embed = [":demo_lib"],
    visibility = ["//visibility:public"],
)
